* make shader file, create rendepass, create renderpiepline, create framebuffer

--- a/src/HelloTriangle/CMakeLists.txt
+++ b/src/HelloTriangle/CMakeLists.txt
@@ -2,3 +2,5 @@
 add_library(hellotriangle SHARED HelloTriangleApplication.cpp HelloTriangleApplication.h)
 
 target_link_libraries(hellotriangle GLFW vulkan)
+
+execute_process(COMMAND sh shader.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shaders)
